<resources>
    <string name="app_name">Pixels 2 Dip Calculator</string>
    <string name="this_device">This device:</string>
    <string name="pixels">Pixels</string>
    <string name="density">Density</string>
    <string name="choose">Choose</string>
    <string name="calculate">Calculate</string>

    <string name="at">\@</string>
    <string name="divider">-----</string>

    <string-array name="density_list">
        <item>MDPI</item>
        <item>HDPI</item>
        <item>XHDPI</item>
        <item>XXHDPI</item>
        <item>XXXHDPI</item>
    </string-array>

</resources>