<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="">

    <TextView
        android:id="@+id/this_device"
        style="@style/GenericFontSizeAndAppearance"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:text="@string/this_device" />

    <TextView
        android:id="@+id/this_devices_density"
        style="@style/GenericFontSizeAndAppearance"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/this_device"
        android:text="@string/this_devices_density" />

    <TextView
        android:id="@+id/pixels"
        style="@style/GenericFontSizeAndAppearance"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/this_devices_density"
        android:layout_margin="15dp"
        android:text="@string/pixels" />

    <TextView
        android:id="@+id/density"
        style="@style/GenericFontSizeAndAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/this_devices_density"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/pixels"
        android:text="@string/density" />

    <EditText
        android:id="@+id/integer_entry"
        style="@style/GenericFontSizeAndAppearance"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pixels"
        android:layout_margin="12dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/at"
        style="@style/GenericFontSizeAndAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pixels"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/integer_entry"
        android:text="@string/at" />

    <Spinner
        android:id="@+id/spinner"
        style="@style/GenericFontSizeAndAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pixels"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/at" />

    <Button
        android:id="@+id/calculate_button"
        style="@style/ButtonFontSizeAndAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/integer_entry"
        android:layout_margin="15dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/display_result"
        style="@style/GenericFontSizeAndAppearance"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculate_button"
        android:layout_margin="15dp" />

</RelativeLayout>